# build-scripts

./: build-hpx.sh  build-hpxc.sh  build-hpxmp.sh  build-llvm.sh  build-omp.sh  build.sh  run.sh
Hello/: CMakeLists.txt  hello.cpp  run.sh
